--- a/sheets/ML_part3.html
+++ b/sheets/ML_part3.html
@@ -607,34 +607,6 @@ More details in [Henckaerts et al. (2018, Scandinavian Actuarial Journal)](https
 
 ---
 
-name: data-sets-used
-
-# Data sets used in this course - Housing data &lt;img src="img/pipe.png" class="title-hex"&gt; &lt;img src="img/dplyr.png" class="title-hex"&gt; &lt;img src="img/ggplot2.png" class="title-hex"&gt;
-
-We will use the Ames Iowa housing data. There are 2,930 properties in the data set. 
-
-The `Sale_Price` (target or response) was recorded along with 80 predictors, including:
-
-* location (e.g. neighborhood) and lot information
-* house components (garage, fireplace, pool, porch, etc.)
-* general assessments such as overall quality and condition
-* number of bedrooms, baths, and so on. 
-
-More details in [De Cock (2011, Journal of Statistics Education)](http://ww2.amstat.org/publications/jse/v19n3/decock.pdf).
-
-The raw data are at [`http://bit.ly/2whgsQM`](http://bit.ly/2whgsQM) but we will use a processed version found in the [`AmesHousing`](https://github.com/topepo/AmesHousing) package. 
-
-You will load the data with the `make_ames()` function from the `AmesHousing` library, and store the data in the object `ames`:
-
-
-```r
-ames &lt;- AmesHousing::make_ames()
-```
-
-A first exploration of the response variable then follows. 
-
----
-
 class: clear, center, middle
 
 background-image: url("img/MnistExamples.png")
@@ -1272,7 +1244,7 @@ Two primary arguments of concern for the final output layer:
    - binary classification: `activation = 'sigmoid'`
 ]
 .pull-right[
-&lt;img src="ML_part3_files/figure-html/unnamed-chunk-49-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="ML_part3_files/figure-html/unnamed-chunk-48-1.png" style="display: block; margin: auto;" /&gt;
 
 `\(f(y) = \frac{1}{1 + e^{-y}}\)`
 ]
@@ -1353,17 +1325,17 @@ class: clear
 
 ```
 ## Model: "sequential"
-## ________________________________________________________________________________
-## Layer (type)                        Output Shape                    Param #     
-## ================================================================================
-## dense_1 (Dense)                     (None, 512)                     401920      
-## ________________________________________________________________________________
-## dense (Dense)                       (None, 10)                      5130        
-## ================================================================================
+## ______________________________________________________________________________________________________________________________________________
+## Layer (type)                                                   Output Shape                                             Param #               
+## ==============================================================================================================================================
+## dense_1 (Dense)                                                (None, 512)                                              401920                
+## ______________________________________________________________________________________________________________________________________________
+## dense (Dense)                                                  (None, 10)                                               5130                  
+## ==============================================================================================================================================
 ## Total params: 407,050
 ## Trainable params: 407,050
 ## Non-trainable params: 0
-## ________________________________________________________________________________
+## ______________________________________________________________________________________________________________________________________________
 ```
 
 ]
@@ -1884,7 +1856,7 @@ With .KULbginline[dropout]:
 model %&gt;% 
   evaluate(test_input, test_output, verbose = 0)
 ##      loss  accuracy 
-## 0.2336413 0.9341000
+## 0.2336414 0.9341000
 ```
 
 `predict(.)` returns a vector of length 10 with the probability per output node.
@@ -1988,7 +1960,7 @@ random &lt;- matrix(runif(28^2), nrow = 1)
 plot_image(random[1, ])
 ```
 
-&lt;img src="ML_part3_files/figure-html/unnamed-chunk-81-1.png" width="360" height="360" style="display: block; margin: auto;" /&gt;
+&lt;img src="ML_part3_files/figure-html/unnamed-chunk-80-1.png" width="360" height="360" style="display: block; margin: auto;" /&gt;
 ]
 
 .pull-right[
@@ -2016,7 +1988,7 @@ The weights of these connections can be visualized as an 28x28 image.
 ```r
 node &lt;- 9
 layer &lt;- 1
-weights &lt;- model$weights[[2*(layer-1) + 1]][, node]
+weights &lt;- model$get_weights()[[2*(layer-1) + 1]][, node]
 
 plot_image(as.numeric(weights))
 ```
@@ -2513,7 +2485,7 @@ gam_ageph &lt;- gam(nclaims ~ s(ageph),
 ]
 
 .pull-right[
-&lt;img src="ML_part3_files/figure-html/unnamed-chunk-107-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="ML_part3_files/figure-html/unnamed-chunk-106-1.png" style="display: block; margin: auto;" /&gt;
 
 
 ]
@@ -2594,7 +2566,7 @@ cann %&gt;% compile(loss = 'poisson', optimize = optimizer_rmsprop())
 .pull-left[
 
 <div id="htmlwidget-76c7b0e4dfca990a73d9" style="width:504px;height:504px;" class="grViz html-widget"></div>
-<script type="application/json" data-for="htmlwidget-76c7b0e4dfca990a73d9">{"x":{"diagram":"digraph {\n\ngraph [layout = \"neato\",\n       outputorder = \"edgesfirst\",\n       bgcolor = \"white\"]\n\nnode [fontname = \"Helvetica\",\n      fontsize = \"10\",\n      shape = \"circle\",\n      fixedsize = \"true\",\n      width = \"0.5\",\n      style = \"filled\",\n      fillcolor = \"aliceblue\",\n      color = \"gray70\",\n      fontcolor = \"gray50\"]\n\nedge [fontname = \"Helvetica\",\n     fontsize = \"8\",\n     len = \"1.5\",\n     color = \"gray80\",\n     arrowsize = \"0.5\"]\n\n  \"1\" [label = \"nn\nInputLayer\n\", shape = \"rectangle\", fixedsize = \"FALSE\", fillcolor = \"#F0F8FF\", fontcolor = \"#000000\", pos = \"0,6!\"] \n  \"2\" [label = \"batch_normalization\nBatchNormalization\n\", shape = \"rectangle\", fixedsize = \"FALSE\", fillcolor = \"#F0F8FF\", fontcolor = \"#000000\", pos = \"0,5!\"] \n  \"3\" [label = \"dense_1\nDense\ntanh\", shape = \"rectangle\", fixedsize = \"FALSE\", fillcolor = \"#F0F8FF\", fontcolor = \"#000000\", pos = \"0,4!\"] \n  \"4\" [label = \"dense\nDense\nlinear\", shape = \"rectangle\", fixedsize = \"FALSE\", fillcolor = \"#F0F8FF\", fontcolor = \"#000000\", pos = \"0,3!\"] \n  \"5\" [label = \"skip\nInputLayer\n\", shape = \"rectangle\", fixedsize = \"FALSE\", fillcolor = \"#F0F8FF\", fontcolor = \"#000000\", pos = \"1.5,6!\"] \n  \"6\" [label = \"add\nAdd\n\", shape = \"rectangle\", fixedsize = \"FALSE\", fillcolor = \"#F0F8FF\", fontcolor = \"#000000\", pos = \"0.75,2!\"] \n  \"7\" [label = \"output\nDense\nexponential\", shape = \"rectangle\", fixedsize = \"FALSE\", fillcolor = \"#F0F8FF\", fontcolor = \"#000000\", pos = \"0.75,1!\"] \n  \"1\"->\"2\" \n  \"2\"->\"3\" \n  \"3\"->\"4\" \n  \"4\"->\"6\" \n  \"5\"->\"6\" \n  \"6\"->\"7\" \n}","config":{"engine":"dot","options":null}},"evals":[],"jsHooks":[]}</script>
+<script type="application/json" data-for="htmlwidget-76c7b0e4dfca990a73d9">{"x":{"diagram":"digraph {\n\ngraph [layout = \"neato\",\n       outputorder = \"edgesfirst\",\n       bgcolor = \"white\"]\n\nnode [fontname = \"Helvetica\",\n      fontsize = \"10\",\n      shape = \"circle\",\n      fixedsize = \"true\",\n      width = \"0.5\",\n      style = \"filled\",\n      fillcolor = \"aliceblue\",\n      color = \"gray70\",\n      fontcolor = \"gray50\"]\n\nedge [fontname = \"Helvetica\",\n     fontsize = \"8\",\n     len = \"1.5\",\n     color = \"gray80\",\n     arrowsize = \"0.5\"]\n\n  \"1\" [label = \"nn\nInputLayer\n\", shape = \"rectangle\", fixedsize = \"FALSE\", fillcolor = \"#F0F8FF\", fontcolor = \"#000000\", pos = \"0,6!\"] \n  \"2\" [label = \"batch_normalization_1\nBatchNormalization\n\", shape = \"rectangle\", fixedsize = \"FALSE\", fillcolor = \"#F0F8FF\", fontcolor = \"#000000\", pos = \"0,5!\"] \n  \"3\" [label = \"dense_8\nDense\ntanh\", shape = \"rectangle\", fixedsize = \"FALSE\", fillcolor = \"#F0F8FF\", fontcolor = \"#000000\", pos = \"0,4!\"] \n  \"4\" [label = \"dense_7\nDense\nlinear\", shape = \"rectangle\", fixedsize = \"FALSE\", fillcolor = \"#F0F8FF\", fontcolor = \"#000000\", pos = \"0,3!\"] \n  \"5\" [label = \"skip\nInputLayer\n\", shape = \"rectangle\", fixedsize = \"FALSE\", fillcolor = \"#F0F8FF\", fontcolor = \"#000000\", pos = \"1.5,6!\"] \n  \"6\" [label = \"add\nAdd\n\", shape = \"rectangle\", fixedsize = \"FALSE\", fillcolor = \"#F0F8FF\", fontcolor = \"#000000\", pos = \"0.75,2!\"] \n  \"7\" [label = \"output\nDense\nexponential\", shape = \"rectangle\", fixedsize = \"FALSE\", fillcolor = \"#F0F8FF\", fontcolor = \"#000000\", pos = \"0.75,1!\"] \n  \"1\"->\"2\" \n  \"2\"->\"3\" \n  \"3\"->\"4\" \n  \"4\"->\"6\" \n  \"5\"->\"6\" \n  \"6\"->\"7\" \n}","config":{"engine":"dot","options":null}},"evals":[],"jsHooks":[]}</script>
 ]
 
 .pull-right[
@@ -2629,12 +2601,12 @@ cann %&gt;% fit(x = cann_input,
 # Adding a skip connection in a NN (cont.)
 
 .pull-left[
-&lt;img src="ML_part3_files/figure-html/unnamed-chunk-118-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="ML_part3_files/figure-html/unnamed-chunk-117-1.png" style="display: block; margin: auto;" /&gt;
 
 ]
 
 .pull-right[
-&lt;img src="ML_part3_files/figure-html/unnamed-chunk-119-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="ML_part3_files/figure-html/unnamed-chunk-118-1.png" style="display: block; margin: auto;" /&gt;
 ]
 
 ---
@@ -2661,7 +2633,7 @@ nn_sev_log %&gt;%
       validation_split = 0, verbose = 0)
 
 predict(nn_sev_log, 1) %&gt;% exp() %&gt;% as.numeric()
-## [1] 451.0045
+## [1] 451.989
 claims$avg %&gt;% summary()
 ##      Min.   1st Qu.    Median      Mean   3rd Qu.      Max. 
 ##       0.0     142.2     523.5    1605.8    1426.4 1989567.9
@@ -3229,7 +3201,7 @@ A useful feature for classifying the number four is the presence of straight, .h
 
 .hi-pink[Q]: How should the .hi-pink[kernel] look to detect this feature?
 
-&lt;img src="ML_part3_files/figure-html/unnamed-chunk-141-1.png" width="200" height="200" style="display: block; margin: auto;" /&gt;
+&lt;img src="ML_part3_files/figure-html/unnamed-chunk-140-1.png" width="200" height="200" style="display: block; margin: auto;" /&gt;
 
 
 ]
@@ -3441,7 +3413,7 @@ random_conv &lt;- k_expand_dims(random_conv, axis = 4)
 plot_image(random)
 ```
 
-&lt;img src="ML_part3_files/figure-html/unnamed-chunk-157-1.png" width="300" height="300" style="display: block; margin: auto;" /&gt;
+&lt;img src="ML_part3_files/figure-html/unnamed-chunk-156-1.png" width="300" height="300" style="display: block; margin: auto;" /&gt;
 ]
 
 .pull-right[
@@ -3449,10 +3421,8 @@ There is not a single doubt, this has to be a nine!
 
 ```r
 predict(model, random_conv)
-##              [,1]         [,2]         [,3]         [,4]         [,5]
-## [1,] 7.361005e-15 2.655454e-30 2.406724e-12 2.888002e-07 5.990133e-18
-##              [,6]         [,7]         [,8]      [,9]        [,10]
-## [1,] 3.955046e-15 6.562733e-10 2.638573e-21 0.9999998 2.079794e-08
+##              [,1]         [,2]         [,3]         [,4]         [,5]         [,6]         [,7]         [,8]      [,9]        [,10]
+## [1,] 7.361005e-15 2.655454e-30 2.406724e-12 2.888002e-07 5.990133e-18 3.955046e-15 6.562733e-10 2.638573e-21 0.9999998 2.079794e-08
 ```
 Actually almost all random images will be classified as a nine.
 
@@ -3465,7 +3435,7 @@ Can you find an interpretation for the other kernels?
 
 
 ```r
-weights &lt;- purrr::map(1:8, function(x) {plot_image(as.numeric(model$weights[[1]][,,,x]), FALSE)})
+weights &lt;- purrr::map(1:8, function(x) {plot_image(as.numeric(model$get_weights()[[1]][,,,x]), FALSE)})
 weights[['nrow']] &lt;- 2
 do.call(gridExtra::grid.arrange, weights)
 ```
