add picture CNN architecture

--- a/sheets/ML_part3.html
+++ b/sheets/ML_part3.html
@@ -3160,6 +3160,13 @@ keras_model_sequential() %&gt;%
 ]
 
 ---
+# A CNN architecture
+
+&lt;br&gt; 
+
+&lt;img src="https://iq.opengenus.org/content/images/2019/04/pic01-1.png" style="display: block; margin: auto;" /&gt;
+
+---
 # A CNN with the MNIST data
 
 .pull-left[
@@ -3254,7 +3261,7 @@ cbind(category, actual_category)[93,]
 ##        category actual_category 
 ##               4               9
 ```
-&lt;img src="ML_part3_files/figure-html/unnamed-chunk-154-1.png" width="75%" style="display: block; margin: auto;" /&gt;
+&lt;img src="ML_part3_files/figure-html/unnamed-chunk-155-1.png" width="75%" style="display: block; margin: auto;" /&gt;
 ]
 
 ---
@@ -3270,7 +3277,7 @@ str(filters)
 
 .hi-pink[Q:] can you find an interpretation for each of these filters?
 
-&lt;img src="ML_part3_files/figure-html/unnamed-chunk-156-1.png" width="30%" style="display: block; margin: auto;" /&gt;
+&lt;img src="ML_part3_files/figure-html/unnamed-chunk-157-1.png" width="30%" style="display: block; margin: auto;" /&gt;
 
 ---
 name: yourturn
